add platform administrator identity management
